# tg_shoter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  prod.yml
core/: config.py  loader.py
core/db/: connection.py  db_api.py  tables.py
filters/: __init__.py  chat_filter.py
handlers/: __init__.py  screen.py
handlers/groups/: __init__.py  help.py  screen_groups.py
handlers/users/: __init__.py  buttons.py  help.py  screen.py  screen_users.py  start.py
tests/integrational/: test_user_screen.py
tests/unit/groups/: test_help_message.py  test_screen_message.py
tests/unit/users/: test_help_message.py  test_start_message.py
utils/: admin_notify.py  screenshot_page.py  whois.py
