[tool.poetry]
name = "telegramshoter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
python-decouple = "^3.6"
loguru = "^0.6.0"
validators = "^0.20.0"
pyppeteer = "^1.0.2"
pre-commit = "^2.20.0"
asyncpg = "^0.26.0"
asyncwhois = "^1.0.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-env = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[flake8]
ignore = "F811"
max-line-length = 101

[tool.isort]
profile = "black"
skip = [".gitignore", ".dockerignore"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
pythonpath = "."
env = [
    "DEBUG = True",
    "D:DATABASE_HOST = db",
    "D:DATABASE_PORT = 5432",
    "D:DATABASE_NAME = bbbatscale",
    "D:DATABASE_USER = bbbatscale",
    "D:DATABASE_PASSWORD = bbbatscalepassword",
    "D:REDIS_HOST = redis",
    "D:REDIS_PORT = 6379",
    "SECRET_KEY = CHANGE-IT-BEFORE-FIRST-DEPLOYMENT"
]
